Fixed browse text background overlaping image border by adding border to text

--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,11 @@ figure.browse p {
     left: 0px;
 
     padding: 4% 5% 3%;
+
     border-radius: 15px;
+    border-bottom: #4d5b53 solid 3px;
+    border-left: #4d5b53 solid 3px;
+    border-right: #4d5b53 solid 3px;;
 }
 
 figure.browse figcaption {
@@ -235,7 +239,10 @@ figure.browse figcaption {
     left: 0px;
 
     padding: 2% 3% 2.5% 2%;
+
     border-radius: 15px 0px;
+    border-top: #4d5b53 solid 3px;
+    border-left: #4d5b53 solid 3px;
 }
 
 figure.browse>*:not(img) {
